# obsidian-semantic-mcp

./: .env.example  .gitignore  .gitleaks.toml  .shipguard.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  GEMINI.md  HANDOFF.md  README.md  SECURITY.md  docker-compose.yml  handoff-osm.md  install.ps1  install.sh  osm_init.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: docker-hub.yml  publish-pypi.yml  tests.yml
docs/: ARCHITECTURE.md  DESIGN-install-decoupling.md  HANDOFF.md  PLAN-portable-mcp-config.md  PLAN-security-correctness.md  README.md  RUNBOOK.md  archive_exclusion_plan.md  extending-with-llamaindex.md  graphrag_integration.md  graphrag_path_a_scope.md  mcp_failures_2026-04-30.md  mcp_raw_stdin_fix_2026-05-07.md  mcp_startup_incident_2026-04-30.md  mcp_startup_race_2026-05-06.md  pi_mcp_bridge_heartbeat.md  plan_launcher_v0.9.5.md  proposed-rename-mnemosyne.md  rag-explained-via-obsidian.md  repo_audit_fix_plan.md
docs/audits/: 2026-07-20-job-ready.md  2026-07-21-arch-audit.md  2026-07-21-job-ready.md  2026-07-21-portfolio-ready.md  2026-07-21-production-ready.md  2026-07-22-portfolio-ready.md  job-ready-progress.md  portfolio-ready-progress.md
scripts/: obsidian-semantic-mcp  osm  osm.ps1
src/: config.py  dashboard.py  launcher.py  migrations.py  server.py
tests/: conftest.py  test_advisory_lock.py  test_collection_contract.py  test_dashboard_security.py  test_dashboard_smoke.py  test_dependency_contract.py  test_dimension_migration.py  test_e2e.py  test_index_state.py  test_launcher.py  test_migrations.py  test_osm_commands.py  test_osm_init.py  test_portable_invocation.py  test_stdin_pipe_response.py  test_unit.py  test_v096_config.py  test_watchdog_resilience.py
