[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obsidian-semantic-mcp"
version = "0.15.0"
description = "Semantic search MCP server for Obsidian vaults"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/artificemachine/obsidian-semantic-mcp"
keywords = ["obsidian", "mcp", "semantic-search", "pgvector", "ollama", "claude"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp==1.28.1",
    "psycopg2-binary==2.9.11",
    "watchdog==6.0.0",
    "requests==2.32.5",
    "pyjwt==2.12.1",
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "shipguard>=0.3.3",
]

[project.scripts]
osm = "osm_init:main"
obsidian-semantic-mcp = "src.launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"osm_init.py" = "osm_init.py"
"obsidian_semantic_mcp.py" = "obsidian_semantic_mcp.py"
"docker-compose.yml" = "docker-compose.yml"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "pg: requires a live PostgreSQL *_test database (see tests/conftest.py pg fixture); excluded by `-m \"not pg\"`",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
# Baseline established 2026-07-21: total 58%, pg-marked tests run reliably in
# CI against the service container (see docs/audits/2026-07-21-production-ready.md).
# Floor at 50 — well below current total, gives headroom for new code without
# hiding a regression. Bump after src/server.py (48%) coverage grows.
fail_under = 50
show_missing = true
